<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- not sure what to update groupID to -->
	<groupId>org.matsim</groupId>
	<artifactId>BYU_imt_optimization</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>MATSim example project</name>
	<description>IMT deployment for MATSim </description>

	<properties>
		<!-- Options: stable build based on pull requests (e.g. 15.0-PR2344), weekly (e.g. 15.0-2023w01) or official (e.g. 14.0) releases -->
		<!--		<matsim.version>16.0-PR2509</matsim.version>-->
		<matsim.version>15.0</matsim.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<!--Might need to configure <distributionManagement> and 	<build> not sure? <-->

	<repositories>
		<!--Note that in general repositories are not transitive, so they need to be repeated at every level where needed.-->
		<repository>
			<!-- Geotools is not on Maven central -->
			<id>osgeo</id>
			<name>Geotools repository</name>
			<!-- <url>http://download.osgeo.org/webdav/geotools</url> -->
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
		<repository>
			<!-- Repository for MATSim (MATSim is not on Maven central, releases and snapshots) -->
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>
		<!-- for dependencies of osm-network-reader -->
		<repository>
			<id>topobyte</id>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<!-- for dependencies of osm-network-reader -->
		<repository>
			<id>slimjars</id>
			<url>https://mvn.slimjars.com</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<!-- This is the matsim "core": -->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<!-- Include the JUnit testing library.  Not transitive. -->
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>

		<dependency>
			<!--MATSim test infrastructure.  Not transitive.-->
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${matsim.version}</version>
			<scope>test</scope>
		</dependency>

		<!--dependencies from here to where stated below are added as a service; they can be removed if you don't need them-->
		<!--to get ExamplesUtils: -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim-examples</artifactId>
			<version>${matsim.version}</version>
			<!--			<scope>test</scope>-->
			<!--			I think that having it in the "main" scope is acceptable for a "leaf" project, and makes life easier.  move the-->
			<!--			matsim-examples dependency into "test" scope if you want to make other projects dependent on your this project here. kai,-->
			<!--			jan'21-->
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>2.9.1</version>
		</dependency>

		<!--some contribs:-->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>otfvis</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<!--deleted mini bus, noise, roadpricing, av freight, bicycle, emissions-->


		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>taxi</artifactId>
			<version>${matsim.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>24.0.1</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.7.0</version>
			<scope>compile</scope>
		</dependency>

		<!--include dvrp dependency-->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>dvrp</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>application</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>vsp</artifactId>
			<version>${matsim.version}</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<!-- This plugin makes source files and javadocs available inside eclipse.  In IntelliJ, this works without plugin.-->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.10</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<!--				The maven-shade-plugin replaces the maven-assembly-plugin to configure "mvn package". The assembly-plugin regularly-->
				<!--				creates problems when GeoTools are used, which the shade-plugin does not (see-->
				<!--				https://stackoverflow.com/questions/27429097/geotools-cannot-find-hsql-epsg-db-throws-error-nosuchauthoritycodeexception/27431381#27431381)-->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>jar_files/IMT/Improved/IMT_3-2-1-21-312.jar</outputFile>
							<transformers>
								<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<Main-Class>run.RunIMT</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
									</manifestEntries>
								</transformer>
								<!-- The following merges the various GeoTools META-INF/services files         -->
								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.RSA</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
			</plugin>
		</plugins>
	</build>
</project>
